--- a/src/components/vue-drag-resize.css
+++ b/src/components/vue-drag-resize.css
@@ -10,15 +10,15 @@
     top: 0;
     left: 0;
     box-sizing: border-box;
-    outline: 1px dashed #d6d6d6;
+    /* outline: 1px dashed #d6d6d6; */
 }
 .vdr-stick {
     box-sizing: border-box;
     position: absolute;
     font-size: 1px;
-    background: #ffffff;
-    border: 1px solid #6c6c6c;
-    box-shadow: 0 0 2px #bbb;
+    /* background: #ffffff; */
+    /* border: 1px solid #6c6c6c; */
+    /* box-shadow: 0 0 2px #bbb; */
 }
 .inactive .vdr-stick {
     display: none;
